--- a/index-24-27.html
+++ b/index-24-27.html
@@ -22,73 +22,16 @@
 
     <section>
       <form>
-        <div>
-          <label for="username">User Name</label>
-          <input
-            id="username"
-            type="text"
-            name="username"
-            placeholder="User Name"
-            required
-          />
-        </div>
-
-        <hr />
-
-        <div>
-          <label for="Passeword">Passeword</label>
-          <input
-            id="password"
-            type="password"
-            name="password"
-            placeholder="!14@hjgOs"
-            required
-            minlength="8"
-            maxlength="8"
-          />
-        </div>
-
-        <hr />
-
-        <div>
-          <label for="mobile">Mobile</label>
-          <input
-            id="mobile"
-            type="number"
-            name="number"
-            placeholder="Number"
-            start="0"
-          />
-        </div>
-
-        <hr />
-
-        <div>
-          <label for="email">Email</label>
-          <input id="email" type="email" name="email" placeholder="Email" />
-        </div>
-
-        <hr />
-
-        <div>
-          <label for="subject">Subject</label>
-          <input id="subject" type="text" name="subject" value="HTML" />
-        </div>
-
-        <hr />
-
-        <div>
-          <input type="number" hidden value="9137546018" />
-        </div>
-
-        <hr />
-
-        <input type="submit" name="Submit" />
-        <br />
-        <br />
-        <input type="reset" name="reset" />
-
-        <hr />
+        <label for="Range">Range</label>
+        <input
+          style="width: 400px"
+          id="range"
+          type="range"
+          min="100"
+          max="500"
+          step="50"
+          value="150"
+        />
       </form>
     </section>
   </body>
