Fourth Time To Added Code After I Learned Fronm 24-27

--- a/index.html
+++ b/index.html
@@ -305,6 +305,96 @@
             />
           </video>
         </div>
+
+        <!-- ................................ -->
+
+        <hr />
+
+        <form>
+          <div>
+            <div>
+              <label for="email">Email</label>
+              <input type="text" id="email" value="os@gmail.com" name="Email" />
+            </div>
+            <br />
+
+            <div>
+              <label for="passeword">Passeword</label>
+              <input
+                type="password"
+                id="passeword"
+                placeholder="1@2!O8N%^"
+                min="8"
+                max="8"
+                name="Passeword"
+              />
+            </div>
+
+            <br />
+
+            <div>
+              <label for="username">User Name</label>
+              <input
+                type="text"
+                id="username"
+                placeholder="User Name"
+                name="UserName"
+              />
+            </div>
+
+            <br />
+
+            <div>
+              <label for="mobile">Mobile</label>
+              <input
+                type="tel"
+                id="mobile"
+                placeholder="Mobile Phone"
+                name="Mobile"
+              />
+            </div>
+          </div>
+
+          <br />
+
+          <div>
+            <div>
+              <label for="url">Url Link</label>
+              <input type="url" id="url" placeholder="Your Url" name="Url" />
+            </div>
+
+            <br />
+
+            <div>
+              <label for="date">Date</label>
+              <input type="date" id="date" name="Date" />
+            </div>
+
+            <br />
+
+            <div>
+              <label for="time">Time</label>
+              <input type="time" id="time" name="Time" />
+            </div>
+
+            <br />
+
+            <div>
+              <label for="file">Upload File</label>
+              <input type="file" id="file" name="File" />
+            </div>
+          </div>
+
+          <div style="display: flex; justify-content: space-evenly">
+            <div>
+              <input type="submit" value="Submit" />
+            </div>
+
+            <div>
+              <input type="reset" value="Reset" />
+            </div>
+          </div>
+        </form>
       </section>
     </section>
   </body>
