--- a/index-28-30.html
+++ b/index-28-30.html
@@ -9,5 +9,58 @@
     <meta name="revised" content="saturday , may 3th , 2025 , 06:41 pm" />
     <title>Index-28-30</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <h1>Practise</h1>
+        <p><b>Practise On Courses From 28 To 30</b></p>
+      </div>
+    </header>
+
+    <hr />
+
+    <section>
+      <form>
+        <div>
+          <label hidden for="Token">Token .......</label>
+          <input
+            type="text"
+            id="Token"
+            name="Token"
+            hidden
+            value="b92f1fc2fce391ad7af633723afd3055"
+          />
+        </div>
+        <br />
+        <div>
+          <label for="Email">Email .......</label>
+          <input
+            type="email"
+            id="Email"
+            name="Email"
+            readonly
+            value="o@o.com"
+          />
+        </div>
+        <br />
+        <div>
+          <label for="UserName">UserName</label>
+          <input
+            type="text"
+            id="UserName"
+            name="UserName"
+            autofocus
+            required
+            minlength="5"
+            maxlength="20"
+          />
+        </div>
+        <br />
+        <div>
+          <input type="reset" value="Empty" />
+          <input type="submit" value="Send" />
+        </div>
+      </form>
+    </section>
+  </body>
 </html>
