--- a/index-28-30.html
+++ b/index-28-30.html
@@ -22,42 +22,77 @@
     <section>
       <form>
         <div>
-          <label hidden for="Token">Token .......</label>
           <input
-            type="text"
-            id="Token"
-            name="Token"
-            hidden
-            value="b92f1fc2fce391ad7af633723afd3055"
+            type="checkbox"
+            id="ProblemSolving"
+            value="Problem Solving"
+            name="Skills"
           />
+          <label for="ProblemSolving">Problem Solving</label>
+        </div>
+
+        <div>
+          <input
+            type="checkbox"
+            id="LogicalThinking"
+            value="Logical Thinking"
+            name="Skills"
+          />
+          <label for="LogicalThinking">Logical Thinking</label>
+        </div>
+
+        <div>
+          <input
+            type="checkbox"
+            id="AdvancedSearch"
+            value="Advanced Search"
+            name="Skills"
+            checked
+          />
+          <label for="AdvancedSearch">Advanced Search</label>
+        </div>
+
+        <div>
+          <input type="checkbox" id="Analysis" value="Analysis" name="Skills" />
+          <label for="Analysis">Analysis</label>
+        </div>
+
+        <div>
+          <input type="checkbox" id="Planning" value="Planning" name="Skills" />
+          <label for="Planning">Planning</label>
         </div>
         <br />
+
         <div>
-          <label for="Email">Email .......</label>
-          <input
-            type="email"
-            id="Email"
-            name="Email"
-            readonly
-            value="o@o.com"
-          />
+          <input type="radio" id="banker" value="banker" name="Job" />
+          <label for="banker">Banker</label>
         </div>
+        <div>
+          <input type="radio" id="officer" value="officer" name="Job" />
+          <label for="officer">Officer</label>
+        </div>
+        <div>
+          <input type="radio" id="doctor" value="doctor" name="Job" />
+          <label for="doctor">Doctor</label>
+        </div>
+        <div>
+          <input
+            type="radio"
+            id="managment"
+            value="managment"
+            name="Job"
+            checked
+          />
+          <label for="managment">Mangment</label>
+        </div>
+        <div>
+          <input type="radio" id="teacher" value="teacher" name="Skills" />
+          <label for="teacher">Teacher</label>
+        </div>
+
         <br />
         <div>
-          <label for="UserName">UserName</label>
-          <input
-            type="text"
-            id="UserName"
-            name="UserName"
-            autofocus
-            required
-            minlength="5"
-            maxlength="20"
-          />
-        </div>
-        <br />
-        <div>
-          <input type="reset" value="Empty" />
+          <input type="reset" value="Reset" />
           <input type="submit" value="Send" />
         </div>
       </form>
