--- a/index-31-34.html
+++ b/index-31-34.html
@@ -16,25 +16,15 @@
     </header>
 
     <section>
-      <form target="_blank" novalidate>
+      <form target="_blank">
         <div>
-          <label for="search">Search </label>
-          <input
-            type="search"
-            id="search"
-            placeholder="Enter your Search"
-            autofocus
-          />
+          <label for="date">Date </label>
+          <input type="date" id="date" name="date" value="1997-04-01" />
         </div>
         <br />
         <div>
-          <label for="file">File </label>
-          <input type="file" id="file" />
-        </div>
-        <br />
-        <div>
-          <label for="url">Url </label>
-          <input type="url" id="url" required />
+          <label for="month">Month</label>
+          <input type="month" id="month" name="month" value="1997-04" />
         </div>
         <br />
         <div>
