--- a/index-31-34.html
+++ b/index-31-34.html
@@ -16,23 +16,15 @@
     </header>
 
     <section>
-      <form target="_blank">
-        <div>
-          <label for="date">Date </label>
-          <input type="date" id="date" name="date" value="1997-04-01" />
-        </div>
-        <br />
-        <div>
-          <label for="month">Month</label>
-          <input type="month" id="month" name="month" value="1997-04" />
-        </div>
-        <br />
-        <div>
-          <input type="reset" value="Empty" />
-          <input type="submit" value="Send" />
-        </div>
-        <br />
-      </form>
+      <hr />
+      <pre>
+            <code>
+                <b>Hello Line One
+                Hello Line Two
+                Hello Line Three
+                      Hello Line Four</b>
+            </code>
+        </pre>
     </section>
   </body>
 </html>
