Sixth Time To Added Code After I Learned Fronm 31-34

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- The Title Writing On The Tab -->
     <title>Html-1-15</title>
   </head>
-  <body style="text-align: center">
+  <body style="text-align: center; background-color: #dddddd;" >
     <header>
       <h1>Hello Everyone Visted My Site I'm So Happy For That , Thanks</h1>
       <hr />
@@ -382,34 +382,6 @@
 
           <br />
 
-          <div>
-            <div>
-              <label for="url">Url Link</label>
-              <input type="url" id="url" placeholder="Your Url" name="Url" />
-            </div>
-
-            <br />
-
-            <div>
-              <label for="date">Date</label>
-              <input type="date" id="date" name="Date" />
-            </div>
-
-            <br />
-
-            <div>
-              <label for="time">Time</label>
-              <input type="time" id="time" name="Time" />
-            </div>
-
-            <br />
-
-            <div>
-              <label for="file">Upload File</label>
-              <input type="file" id="file" name="File" />
-            </div>
-          </div>
-
           <hr />
 
           <!-- ................................ -->
@@ -555,7 +527,85 @@ You Can Write Anything About Yor Submit</textarea
 
           <hr />
 
+          <br />
+
+          <div>
+            <div>
+              <label for="search">Search</label>
+              <input type="search" id="search" name="search" />
+            </div>
+            <br />
+
+            <div>
+              <label for="file">File</label>
+              <input type="file" id="file" name="file" />
+            </div>
+            <br />
+
+            <div>
+              <label for="url">Url</label>
+              <input type="url" id="url" name="url" />
+            </div>
+            <br />
+
+            <div>
+              <label for="week">Week</label>
+              <input type="week" id="week" name="week" />
+            </div>
+            <br />
+
+            <div>
+              <label for="month">Month</label>
+              <input type="month" id="month" name="month" />
+            </div>
+            <br />
+
+            <div>
+              <label for="time">Time</label>
+              <input type="time" id="time" name="time" />
+            </div>
+            <br />
+
+            <div>
+              <label for="date">Date</label>
+              <input type="date" id="date" name="date" />
+            </div>
+            <br />
+
+            <div>
+              <label for="date-time-local">Date Time Local</label>
+              <input
+                type="datetime-local"
+                id="date-time-local"
+                name="date-time-local"
+              />
+            </div>
+            <br />
+          </div>
+
+          <br />
+
+          <div>
+            <input list="programming" name="Programming" />
+            <datalist id="programming">
+              <option value="Js"></option>
+              <option value="Java"></option>
+              <option value="C"></option>
+              <option value="C#"></option>
+              <option value="C++"></option>
+              <option value="Php"></option>
+              <option value="Python"></option>
+            </datalist>
+          </div>
+
+          <hr />
+          <br />
+
           <div style="display: flex; justify-content: space-evenly">
+            <div>
+              <button>Button</button>
+            </div>
+
             <div>
               <input type="submit" value="Submit" />
             </div>
@@ -565,6 +615,52 @@ You Can Write Anything About Yor Submit</textarea
             </div>
           </div>
         </form>
+
+        <hr />
+
+        <br />
+
+        <article style="text-align: start">
+          <q> This Is A Story To Tell Them </q>
+          <blockquote>And This Is A Poet To Read</blockquote>
+          <br />
+          <p>22 السلام عليكم Welcome</p>
+          <p><bdi>السلام عليكم</bdi> 22 Welcome</p>
+        </article>
+
+        <hr />
+        <br />
+
+        <div>
+          <b>12345678 <br>
+          <b>12345678 <br>
+          <b>12345678 <br>
+          <b>12345678 <br>
+          </b>
+        </div>
+
+        <hr>
+        <br>
+        
+        <div style="text-align: start;">
+          <pre>
+            <code>
+              for(let i = 0 ; i = a.lenth ; i++){
+                console.log(a[i]);
+              }
+
+            </code>
+          </pre>
+        </div>
+
+        <hr>
+        <br>
+
+        <div style="padding: 10px;">
+          <iframe src="https://elzero.org/" width="100%" height="400px"></iframe>
+        </div>
+
+
       </section>
     </section>
   </body>
