Index-1 First Time Added Code

--- a/index-1.html
+++ b/index-1.html
@@ -9,5 +9,217 @@
     <meta name="revised" content="thursday , may 6th , 2025 , 07:26 pm" />
     <title>ٌقرائة الكتب</title>
   </head>
-  <body></body>
+  <body>
+    <!-- راس الصفحه بها العنوان الرئيسي  -->
+    <header>
+      <h1>أهميه قرائة الكتب في حياتنا اليوميه</h1>
+      <h1>..............................................</h1>
+      <hr />
+    </header>
+
+    <!-- محتوى الصفحه بالكامل -->
+    <section>
+      <!-- العنواين الفرحيه وحدها -->
+      <article>
+        <h2>جدول المحتويات :</h2>
+        <h3>١ - مقدمة موضوع تعبير عن الكتاب خير صديق</h3>
+        <h3>٢ - موضوع تعبير عن الكتاب خير صديق</h3>
+        <h4>١ - فوائد الكتاب</h4>
+        <h4>٢ - أهمية القراءة</h4>
+        <h4>٣ - متى يكون الكتاب صديقا لك؟</h4>
+        <h4>٤ - لماذا الكتاب هو الصديق الأفضل؟</h4>
+        <h4>٥ - ما أثر صداقة الكتاب في حياتك؟</h4>
+        <h3>٣ - خاتمة موضوع تعبير عن الكتاب خير صديق</h3>
+        <h3>٤ - موضوع تعبير عن الكتاب خير صديق pdf</h3>
+        <h3>٥ - موضوع تعبير عن الكتاب خير صديق doc</h3>
+      </article>
+
+      <hr />
+
+      <article>
+        <h3>١ - مقدمة موضوع تعبير عن الكتاب خير صديق</h3>
+        هل جرّبتَ مرّة أن <b>تبحر</b> في عالمٍ من المعارف دون ملل؟ هل جرّبت أن
+        تصادق صديقًا وفيًّا لطيفًا يؤنس وحدتك ويأخذ بيدك نحو الأفضل؟ إذا أنت لم
+        تشعر بعد بهذه الأمور فعليك بالكتاب.
+        <p></p>
+
+        <br />
+
+        <h3>٢ - موضوع تعبير عن الكتاب خير صديق</h3>
+        <p>
+          يعد الكتاب من أهم الأمور الحياتية التي ترافق أيّامنا، وذلك لما له من
+          دور كبير في إثراء معلوماتنا بكلّ جديد، إذ يطوّر الكتاب من مهارات
+          الإنسان العقلية في المجالات كلّها، ويعتبر عجلة لا تتوقف من التّطوّر
+          والتّقدّم.
+        </p>
+
+        <br />
+
+        <h4>١ - فوائد الكتاب</h4>
+        <p>
+          إن الكتاب ثروة كبيرة في حياة الإنسان، ولا سيّما مَن كان الكتاب صديقًا
+          له، فهناك بعض الفوائد النفسية الهامة التي تسببها القراءة، ومن ذلك أنّ
+          الإنسان يصبح صاحب تفكير عقلاني موضوعي، كما أنّ القراءة تجعل الإنسان
+          هادئًا، وأمّا عن الفائدة العلمية للكتاب، فإنّ القراءة تثري مخزون
+          الإنسان الفكري، وتجعله على علم في كلّ شيء، بالإضافة إلى تنشيط خلايا
+          العقل من خلال التذكر المستمر.
+        </p>
+
+        <br />
+
+        <h4>٢ - أهمية القراءة</h4>
+        <p>
+          و<b>للقراءة</b> المستمرة ثمرات يراها المرء تتجلّى أمامه في الحياة، إذ
+          تساعده القراءة على بلورة شخصيته وتحديد كيانه، كما أنّه يستطيع وعن طريق
+          الصفحات التي بين يديه أن يبحر في عالم واسع، ويسافر إلى جميع أنحاء
+          العالم عبر هذه الكتاب.
+        </p>
+
+        <br />
+
+        <h4>٣ - متى يكون الكتاب صديقا لك؟</h4>
+        <p>
+          يكون الكتاب صديقًا لك عندما تعرف حقًا وعدلًا أن هذه الحياة لن تفهمها
+          من خلال تجاربك فقط بل أنت تحتاج إلى تجارب الآخرين من أجل أن تعيها وأن
+          تسمع الصرخات والضحكات والآمال من حولك في هذا العالم، الكتاب خير صديق
+          لما تمل من ثرثرة الآخرين التي ليس لها أي فائدة، هنا يكون الكتاب العون
+          والسند والجليس الصالح.
+        </p>
+
+        <br />
+
+        <h4>٤ - لماذا الكتاب هو الصديق الأفضل؟</h4>
+        <p>
+          الكتاب هو خير صديق لك لأنك من خلاله تستمع إلى الروايات القديمة التي
+          تذخر بعقول فائضة وحسنة، فيحبو الإنسان الفصيح نحو كتابه مثلما يحبو
+          الرضيع نحو الحلوى التي يراها لأول مرة في حياته، إياك أن تظن أن الكتاب
+          قد انتهى وقته أبدًا بل إن أعظم قادة العالم لم يكونوا كذلك لولا تسليتهم
+          بالكتب دائمًا.
+        </p>
+
+        <br />
+
+        <h4>٥ - ما أثر صداقة الكتاب في حياتك؟</h4>
+        <p>
+          لقد استطاع الكتاب أن يغير حياتي نحو الأفضل ويجعلني سليم الفكر بعيدًا
+          عن كل الترهات المنتشرة الآن في هذا العالم، لقد جعلني أؤمن حقًا أنّ
+          حياة واحدة لا تكفيني بل لا بد أن أعيش أكثر من حياة من أجل أن أحظى
+          بتجارب أقوى وأعمق.
+        </p>
+
+        <br />
+
+        <h3>٣ - خاتمة موضوع تعبير عن الكتاب خير صديق</h3>
+        <p>
+          وهكذا فإنّ الكتاب هو الصّديق الوفي لصاحبه بما يقدّمه له، وهو أنيس
+          أوقات الفراغ يقصده كلّ إنسان متميّز يريد أن يغيّر شيء في شخصيته، ويريد
+          أن يطوّرها نحو الأفضل.
+        </p>
+
+        <br />
+
+        <h3>٤ - موضوع تعبير عن الكتاب خير صديق pdf</h3>
+        <p>
+          يكثر الحديث عن الكتاب وأهميته في الحياة، وفائدته على الفرد والمجتمع،
+          وفي المقال السابق موضوع تام العناصر عن الكتاب، وسنرفقه لكم فيما يلي
+          على شكل ملف pdf لتتمكنوا من الحصول عليه وتحميله، للتحميل اضغط
+          <a href="https://kalimarabic.com/"> هنا </a>
+        </p>
+
+        <br />
+
+        <h3>٥ - موضوع تعبير عن الكتاب خير صديق doc</h3>
+        <p>
+          يبقى الكتاب هو صديق الإنسان الوفي وخير صديق، فمنه يأخذ كلّ شيء جميل،
+          وبه يرتقي، وفي المقال السابق موضوع تام العناصر عن الكتاب، وسنرفقه لكم
+          فيما يلي على شكل ملف doc لتتمكنوا من الحصول عليه وتحميله، للتحميل اضغط
+          “هنا“
+        </p>
+        <p>
+          إلى هنا نكون قد وصلنا إلى نهاية مقال
+          <b>موضوع تعبير عن الكتاب خير صديق كامل العناصر</b>، وقد وضعنا لكم من
+          خلال هذا المقال كلّ ما يتعلّق بالكتاب وأهميّته في الحياة.
+        </p>
+      </article>
+      <hr />
+
+      <article>
+        <table
+          border="1"
+          cellspacing="5"
+          cellpadding="5"
+          style="text-align: center; margin: auto"
+        >
+          <thead>
+            <th></th>
+            <th>١</th>
+            <th>٢</th>
+            <th>٣</th>
+            <th>٤</th>
+            <th>٥</th>
+            <th>٦</th>
+            <th>٧</th>
+            <!-- <th>الحصه الاولى</th>
+            <th>الحصة الثانيه</th>
+            <th>الحصه الثالثه</th>
+            <th>الحصه الرابعه</th>
+            <th>الحصه الخامسه</th>
+            <th>الحصه السادسه</th>
+            <th>الحصه السابعه</th> -->
+          </thead>
+          <tbody>
+            <tr>
+              <th>الاحد</th>
+              <td>الرياضيات</td>
+              <td>العلوم</td>
+              <td>اللغه الانجليزية</td>
+              <td colspan="2">الحاسوب</td>
+              <td>اللغه العربيه</td>
+              <td>العاب</td>
+            </tr>
+            <tr>
+              <td><b>الاثنين</b></td>
+              <td colspan="2">الديكور</td>
+              <td>اللغه الانجليزية</td>
+              <td>التربيه الاسلاميه</td>
+              <td>الرياضيات</td>
+              <td>اللغه العربيه</td>
+              <td>اللغه الانجليزية</td>
+            </tr>
+            <tr>
+              <td><b>الثلاثاء</b></td>
+              <td>اللغه الانجليزية</td>
+              <td>اللغه العربيه</td>
+              <td>الرياصيات</td>
+              <td>العلوم</td>
+              <td>الموسيقى</td>
+              <td>التربيه الاسلاميه</td>
+              <td>اجتماعيات</td>
+            </tr>
+            <tr>
+              <td><b>الاربعاء</b></td>
+              <td colspan="2">التربيه الفنيه</td>
+              <td>الرياصيات</td>
+              <td>اللغه الانجليزية</td>
+              <td>العلوم</td>
+              <td>العاب</td>
+              <td>اللغه العربيه</td>
+            </tr>
+            <tr>
+              <td><b>الخميس</b></td>
+              <td>اللغه الانجليزية</td>
+              <td>الرياضيات</td>
+              <td>اللغه العربيه</td>
+              <td>التربيه الاسلاميه</td>
+              <td>احتماعيات</td>
+              <td>اللغه العربيه</td>
+              <td>علوم</td>
+            </tr>
+          </tbody>
+          <tfoot></tfoot>
+        </table>
+      </article>
+      <hr />
+    </section>
+  </body>
 </html>
